# aoc

./: README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.in  requirements.txt  tsconfig.json  vitest.config.ts
2023/: 1.go
2023/1/: index.test.ts  index.ts
2023/1/__tests__/: index.test.ts
2023/2/: index.test.ts  index.ts
cmd/y2024/d1/: input.txt  main.go
day1/: day1.go
go/: go.mod
go/y2024/d1/: main.go
internals/utils/: scanner.go  utils.go
puzzles/01/: main.py
python/: pyproject.toml
python/_2023/_1/: test_trebuchet.py  trebuchet.py
python/_2023/_2/: cube_conundrum.py  test_cube_conundrum.py
src/2023/: 1.go
src/_2023/_1/: test_trebuchet.py  trebuchet.py
src/_2023/_2/: test_cube_conundrum.py
typescript/: .eslintrc  package.json  pnpm-lock.yaml  tsconfig.json
typescript/2023/1/: index.test.ts  index.ts
year2023/day1/: trebuchet.py
year2023/day2/: cube_conundrum.py
year_2024/day_1/: main.py  part_1.py  part_2.py  part_one.py
year_2024/day_2/: part_1.py
year_2024/day_3/: part_1.py
year_2024/day_4/: part_1.py
